# firebase-drf-auth

./: pyproject.toml
drf_firebase_auth/: auth.py  settings.py
